--- a/roles/bastion/tasks/bastion.yml
+++ b/roles/bastion/tasks/bastion.yml
@@ -43,8 +43,8 @@
 
 - name: Copy docker bastion systemd file
   ansible.builtin.template:
-    src: "bastion.service.j2"
-    dest: /etc/systemd/system/docker-compose.service
+    src: "docker-compose.service"
+    dest: /etc/systemd/system/docker-compose@.service
     owner: root
     group: root
     mode: '0644'
@@ -59,6 +59,7 @@
     group: root
     mode: '0644'
   with_items: "{{ user_list }}"
+  register: service
   notify:
     - Restart unit
   tags: adduser
