--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,8 +1,16 @@
 ---
-- name: Install Docker
-  ansible.builtin.apt:
-    name: docker-ce
-    state: present
+- name: Install pre-reqs for Docker and Ansible
+  apt: name={{ item }} state=latest update_cache=yes
+  loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools']
+
+- name: Add the GPG key for Docker
+  shell: 'curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg'
+
+- name: Add the repository to fetch the docker package
+  shell: 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian bullseye stable" | tee /etc/apt/sources.list.d/docker.list'
+
+- name: Update source list and then install docker
+  apt: update_cache=yes name=docker-ce state=latest
 
 - name: Configure Docker
   ansible.builtin.template:
