--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: Add the GPG key for Docker
+  environment: "{{ environment_vars  | | default([]) }}"
   apt_key:
     url: https://download.docker.com/linux/debian/gpg
     state: present
