--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Add the GPG key for Docker
   apt_key:
-    data: "{{ lookup('url', 'https://download.docker.com/linux/debian/gpg', split_lines=False) }}"
+    url: https://download.docker.com/linux/debian/gpg
     state: present
 
 - name: Add the repository to fetch the docker package
