--- a/roles/bastion/files/Dockerfile
+++ b/roles/bastion/files/Dockerfile
@@ -4,6 +4,7 @@ LABEL Author="Ronan Ducamp"
 
 ENV TERM=xterm-256color
 
+COPY /etc/apt/apt.conf.d/01proxy /etc/apt/apt.conf.d/01proxy
 COPY ssh-user-auth.sh /usr/bin/ssh-user-auth.sh
 COPY bastion-shell.sh /usr/bin/bastion-shell.sh
 COPY entrypoint.sh /usr/bin/entrypoint.sh
