--- a/roles/bastion/tasks/bastion.yml
+++ b/roles/bastion/tasks/bastion.yml
@@ -37,6 +37,11 @@
   tags:
     - update-docker
 
+- name: Copy proxy file
+  ansible.builtin.copy:
+    remote_src: /etc/apt/apt.conf.d/01proxy
+    dest: /opt/bastion/docker/01proxy
+
 - name: Generate an OpenSSH keypair
   community.crypto.openssh_keypair:
     path: /opt/bastion/sshpiper/id_rsa
