Update - extension Dockerfile

--- a/roles/bastion/tasks/bastion.yml
+++ b/roles/bastion/tasks/bastion.yml
@@ -33,7 +33,7 @@
     mode: '0644'
   with_fileglob:
     - "files/*.sh"
-    - "templates/Dockerfile.j2"
+    - "templates/Dockerfile"
   tags:
     - update-docker
 
