Update - split user task

--- a/roles/bastion/tasks/main.yml
+++ b/roles/bastion/tasks/main.yml
@@ -2,5 +2,9 @@
 - name: Bastion tasks
   include_tasks: bastion.yml
   tags:
-    - adduser
     - update-docker
+
+- name: Users tasks
+  include_tasks: users.yml
+  tags:
+    - adduser
