--- a/roles/bastion/tasks/bastion.yml
+++ b/roles/bastion/tasks/bastion.yml
@@ -55,6 +55,19 @@
   notify:
     - Restart sshpiper
 
+- name: Reconfigure sshd
+  ansible.builtin.lineinfile:
+    path: /etc/ssh/sshd_config
+    regexp: '^#ListenAddress'
+    line: ListenAddress {{ ansible_eth0.ipv4.address }}
+  register: update_sshd
+
+- name: Restart sshd
+  ansible.builtin.systemd:
+    name: sshd
+    state: restarted
+  when: update_sshd is defined and update_sshd.rc == 0
+
 - name: Start sshpiper
   ansible.builtin.systemd:
     name: docker-compose@sshpiper
