--- a/roles/bastion/tasks/bastion.yml
+++ b/roles/bastion/tasks/bastion.yml
@@ -60,13 +60,7 @@
     path: /etc/ssh/sshd_config
     regexp: '^#ListenAddress'
     line: ListenAddress {{ ansible_eth0.ipv4.address }}
-  register: update_sshd
-
-- name: Restart sshd
-  ansible.builtin.systemd:
-    name: sshd
-    state: restarted
-  when: update_sshd is defined and update_sshd.rc == 0
+  notify: Restart sshd
 
 - name: Start sshpiper
   ansible.builtin.systemd:
