--- a/roles/bastion/handlers/main.yml
+++ b/roles/bastion/handlers/main.yml
@@ -5,7 +5,7 @@
     enabled: true
     state: restarted
     daemon_reload: true
-    with_items: service.result
+  with_items: "{{ service.result | selectattr('changed', 'equalto', true) | map(attribute='item') | map(attribute='name') | list }}"
 
 - name: Restart sshpiper
   ansible.builtin.systemd:
