--- a/playbooks/02_bastion.yml
+++ b/playbooks/02_bastion.yml
@@ -1,8 +1,7 @@
 ---
-- name: Init bastion host
+- name: Config bastion
   hosts: "bastion"
   become: true
   gather_facts: true
-  tags: adduser
   roles:
     - bastion
