Fix - tag uncommited

--- a/roles/bastion/tasks/users.yml
+++ b/roles/bastion/tasks/users.yml
@@ -89,7 +89,9 @@
   register: service
   notify:
     - Restart unit
-  tags: adduser
+  tags: 
+    - adduser
+    - update-bastion
 
 - name: slurp pub key
   slurp:
