--- a/roles/bastion/templates/docker-compose.service
+++ b/roles/bastion/templates/docker-compose.service
@@ -11,7 +11,7 @@ Type=oneshot
 RemainAfterExit=true
 WorkingDirectory=/opt/bastion/docker/%i
 ExecStart=/usr/bin/docker compose up -d --remove-orphans
-ExecStop=/usr/bin/docker compose down
+ExecStop=/usr/bin/docker compose stop
 
 [Install]
 WantedBy=multi-user.target
