Add - tag update-docker

--- a/roles/bastion/tasks/bastion.yml
+++ b/roles/bastion/tasks/bastion.yml
@@ -45,6 +45,8 @@
     mode: '0644'
   notify:
     - Daemon reload
+  tags:
+    - update-docker
 
 - name: Copy docker sshpiper
   ansible.builtin.template:
